[package]
name = "papillae"
version = "0.1.0"
edition = "2021"
authors = ["Nick Stone <nicholasestone@proton.me>"]

[dependencies]
free_willy = { git = "https://github.com/nstone8/free_willy", version = "0.1.0" }
futures = "0.3.30"
iced = { version = "0.12.1", features = ["image", "advanced"] }
image = "0.25.1"
palette = "0.7.6"
ralston = { git = "https://github.com/nstone8/ralston", version = "0.1.0" }
